--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,5 @@
+Header set Access-Control-Allow-Origin "*"
+
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
